
  Gii Template Collection Change Log
  ==================================

Version 0.5
-----------
- New: Make Form entries persistant with $_SESSION (thyseus)
- Chg: Move Relation Widget and CAdvancedArBehavior to extensions folder, not
components/ anymore because ext.Relation looks better than application.components.Relation and there is no default Path alias for components (thyseus)
- Chg: Make FullCrud Controller template use Yii::app()->request->getQuery() and ->getPost() (from CHttpRequest unless overridden in application config) to retrieve parameters instead of directly accessing $_GET and $_POST. (Leo R. Lundgren <leo@finalresort.org>) 
- Fix: Make the Relation widget not add a delimiter after the last field when concatenating multiple fields. (Leo R. Lundgren <leo@finalresort.org>)
- Fix: A bug in the FullModel template made Gii/Yii look for the CAdvancedArBehavior directly (not via path alias). (Leo R. Lundgren <leo@finalresort.org>)  
- New: Added support for generating activeDropDownList's for ENUM mysql column fields

Version 0.4
-----------
<Censored by the Council of Galaxy Hitchhiking>

Version 0.3
-----------
- Fix: Datepicker is now working
- Relation Generation is much improved
- Removed even more Comments

Version 0.2
-----------
FullCrud: 
- Ajax Validation is enabled for all forms 
- Disabled the comparison Operator hint in the admin view 
- Moved the "Create" and "Update" Button out of the _form view
- Relation Widget now generates correct 'fields' attributes
- Updated CAdvancedArBehavior to latest version 0.3
- Added MANY_MANY listing of related objects to view.php view
Controller Generation:
- The Controller now saves MANY_MANY Relations automatically by passing the relation over to the CAdvancedArBehavior